syntax = "proto3";

package cosmos.group.v1beta1;

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/group";

// EventCreateGroup is an event emitted when a group is created.
message EventCreateGroup {

  // group_id is the unique ID of the group.
  uint64 group_id = 1;
}

// EventUpdateGroup is an event emitted when a group is updated.
message EventUpdateGroup {

  // group_id is the unique ID of the group.
  uint64 group_id = 1;
}

// EventCreateGroupAccount is an event emitted when a group account is created.
message EventCreateGroupAccount {

  // address is the address of the group account.
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  ;
}

// EventUpdateGroupAccount is an event emitted when a group account is updated.
message EventUpdateGroupAccount {

  // address is the address of the group account.
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  ;
}

// EventCreateProposal is an event emitted when a proposal is created.
message EventCreateProposal {

  // proposal_id is the unique ID of the proposal.
  uint64 proposal_id = 1;
}

// EventVote is an event emitted when a voter votes on a proposal.
message EventVote {

  // proposal_id is the unique ID of the proposal.
  uint64 proposal_id = 1;
}

// EventExec is an event emitted when a proposal is executed.
message EventExec {

  // proposal_id is the unique ID of the proposal.
  uint64 proposal_id = 1;
}
